--- a/feedback.html
+++ b/feedback.html
@@ -28,6 +28,7 @@
         display: inline-block;
     }
 </style>
+<button onclick="history.back()">Back</button>
 
 <h2>We’re thrilled you enjoyed your meal.<br>
 Would you mind leaving us a review online?<br>
