--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
 <footer>
   <p>&copy; 2025 Taste buds. All rights reserved.</p>
 </footer>
+<button onclick="window.location.href='file:///C:/Users/GANGA/Desktop/workspace/TasteBuds/about.html'">Next</button>
 
 
 </body>
