--- a/menu.html
+++ b/menu.html
@@ -3,81 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Our Menu</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #fef9f4;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
+   <style>
+	body {
+	             font-family: Arial, sans-serif;
+	             background-color: #fef9f4;
+	             color: #333;
+	             margin: 0;
+	             padding: 20px;
+	         }
 
-        h1 {
-            text-align: center;
-            font-size: 3em;
-            color: #d35400;
-            margin-bottom: 40px;
-        }
+	         h1 {
+	             text-align: center;
+	             font-size: 3em;
+	             color: #d35400;
+	             margin-bottom: 40px;
+	         }
 
-        .section {
-            background-color: #fff;
-            padding: 25px;
-            margin: 30px auto;
-            max-width: 1000px;
-            box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
-            border-radius: 12px;
-        }
+	         .section {
+	             background-color: #fff;
+	             padding: 25px;
+	             margin: 30px auto;
+	             max-width: 1000px;
+	             box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
+	             border-radius: 12px;
+	         }
 
-        h2 {
-            font-size: 2em;
-            color: #2c3e50;
-            border-bottom: 2px solid #e0e0e0;
-            padding-bottom: 5px;
-        }
+	         h2 {
+	             font-size: 2em;
+	             color: #2c3e50;
+	             border-bottom: 2px solid #e0e0e0;
+	             padding-bottom: 5px;
+	         }
 
-        h3 {
-            font-size: 1.3em;
-            color: #7f8c8d;
-            margin-top: 15px;
-        }
+	         h3 {
+	             font-size: 1.3em;
+	             color: #7f8c8d;
+	             margin-top: 15px;
+	         }
 
-        p {
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
+	         p {
+	             line-height: 1.6;
+	             margin-bottom: 20px;
+	         }
 
-        ul {
-            list-style: none;
-            padding-left: 0;
-        }
+	         ul {
+	             list-style: none;
+	             padding-left: 0;
+	         }
 
-        li {
-            background-color: #fff3e0;
-            padding: 10px 15px;
-            margin: 5px 0;
-            border-radius: 8px;
-            font-size: 1.1em;
-            transition: background-color 0.3s;
-        }
+	         li {
+	             background-color: #fff3e0;
+	             padding: 10px 15px;
+	             margin: 5px 0;
+	             border-radius: 8px;
+	             font-size: 1.1em;
+	             transition: background-color 0.3s;
+	         }
 
-        li:hover {
-            background-color: #ffe0b2;
-        }
+	         li:hover {
+	             background-color: #ffe0b2;
+	         }
 
-        img {
-            display: block;
-            max-width: 100%;
-            height: auto;
-            margin: 20px 0;
-            border-radius: 10px;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+	         img {
+	             display: block;
+	             max-width: 100%;
+	             height: auto;
+	             margin: 20px 0;
+	             border-radius: 10px;
+	             box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+	         }
+
+	</style>
 </head>
 <body>
 
 <h1>Our Menu</h1>
-
+<button onclick="history.back()">Back</button>
+<button onclick="window.location.href='file:///C:/Users/GANGA/Desktop/workspace/TasteBuds/feedback.html'">Next</button>
 
 <div class="section">
     <h2>Burgers</h2>
