--- a/about.html
+++ b/about.html
@@ -1,19 +1,4 @@
-<style>
-  
-  h2, p {
-    text-align: center;
-  }
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
-  hr {
-    margin: 20px auto;
-    width: 80%;
-  }
-</style>
+<link rel="stylesheet" href="file:///C:/Users/GANGA/Desktop/workspace/TasteBuds/style.css">
 <h2 style="background-color:Tomato;">Welcome to Tastebuds!</h2>
 <hr>
 <hr>
@@ -26,5 +11,7 @@ Taste Buds isn’t just a name—it’s a promise of flavor, fun, and food made 
 <hr>
 <hr>
 <img src="file:///C:/Users/GANGA/Desktop/workspace/TasteBuds/image/about.jpg"  class="center">
+<button onclick="history.back()">Back</button>
+<button onclick="window.location.href='file:///C:/Users/GANGA/Desktop/workspace/TasteBuds/menu.html'">Next</button>
 
  
